--- a/src/main/resources/templates/template.html
+++ b/src/main/resources/templates/template.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Мой сайт</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" th:href="@{/style.css}" />
 </head>
 <body>
 <header>
@@ -24,6 +24,5 @@
     <p>© 2021 Мой сайт. Все права защищены.</p>
 </footer>
 
-<script src="script.js"></script>
 </body>
 </html>
