--- a/src/main/resources/templates/add-user.html
+++ b/src/main/resources/templates/add-user.html
@@ -16,7 +16,7 @@
 
 <body>
 <div>
-  <h2>New Customer</h2>
+  <h2>New User</h2>
   <div>
     <form action="/new" method="post">
       <input type="text" name="login" placeholder="введите логин" class="form-control"/>
