--- a/src/main/resources/templates/account.html
+++ b/src/main/resources/templates/account.html
@@ -20,7 +20,7 @@
     <div>
       <form action="/auth" method="post">
         <input type="text" name="email" placeholder="введите почту" class="form-control"/>
-        <input type="text" name="password" placeholder="введите пароль" class="form-control"/>
+        <input type="text" name="passwordInput" placeholder="введите пароль" class="form-control"/>
         <button type="submit" class="btn btn-success">Войти</button>
       </form>
       <p><a href="/new">Зарегистрироваться</a></p>
