--- a/src/main/resources/templates/add-user.html
+++ b/src/main/resources/templates/add-user.html
@@ -1,20 +1,86 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Мой сайт</title>
+  <title>IG</title>
   <link rel="stylesheet" th:href="@{/style.css}" />
+  <!--Картинки-->
+  <script src="https://kit.fontawesome.com/9e56eb5395.js" crossorigin="anonymous"></script>
+
+  <!--Шрифты-->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.rtl.min.css" integrity="sha384-nU14brUcp6StFntEOOEBvcJm4huWjB0OcIeQ3fltAfSmuZFrkAif0T+UtNGlKKQv" crossorigin="anonymous">
+
 </head>
 <body>
-<header>
-  <nav>
-    <ul>
-      <li><a href="/">Главная</a></li>
-      <li><a href="/log">Аккаунт</a></li>
-    </ul>
-  </nav>
+<header class="container-fluid">
+  <div class="container">
+    <div class="row">
+      <div class="col-4">
+        <h1><a href="/">IG</a></h1>
+      </div>
+      <nav class="col-8">
+        <ul>
+          <li><a href="/">Главная</a> </li>
+          <li>
+            <a href="/log"><i class="fa-solid fa-user"></i>Аккаунт</a>
+            <ul>
+              <li><a href="/new">Регистрация</a></li>
+              <li><a href="/">Авторизация</a></li>
+            </ul>
+          </li>
+          <div th:switch="${userLogin}">
+            <h2 th:case="null"></h2>
+            <div th:case="*">
+              <p th:text="${userLogin.login}"/>
+            </div>
+          </div>
+        </ul>
+      </nav>
+    </div>
+  </div>
 </header>
 
 <body>
+
+
+<div class="container reg_form">
+  <form class="row justify-content-center" method="post" action="add-user.html">
+    <h2>Форма регистрации</h2>
+    <div class="mb-3 col-12 col-md-6">
+      <label for="formGroupExampleInput" class="form-label">Ваш логин</label>
+      <input type="text" class="form-control" id="formGroupExampleInput" placeholder="введите ваш логин">
+    </div>
+    <div class="w-100"></div>
+    <div class="mb-3 col-12 col-md-6">
+      <label for="exampleInputEmail1" class="form-label">Email</label>
+      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="введите ваш email">
+      <div id="emailHelp" class="form-text">Ваш email адрес не будет использован для спама)</div>
+    </div>
+    <div class="w-100"></div>
+    <div class="mb-3 col-12 col-md-6">
+      <label for="exampleInputPassword1" class="form-label">Пароль</label>
+      <input type="password" class="form-control" id="exampleInputPassword1" placeholder="введите ваш пароль">
+    </div>
+    <div class="w-100"></div>
+    <div class="mb-3 col-12 col-md-6">
+      <label for="exampleInputPassword2" class="form-label">Повторите пароль</label>
+      <input type="password" class="form-control" id="exampleInputPassword2" placeholder="повторите ваш пароль">
+    </div>
+    <div class="w-100"></div>
+    <div class="mb-3 col-12 col-md-6">
+      <button type="submit" class="btn btn-secondary">Зарегистрироваться</button>
+      <a href="account.html">Авторизоваться</a>
+    </div>
+  </form>
+</div>
+
 <div>
   <h2>New User</h2>
   <div>
