update mail check

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -22,6 +22,11 @@
 <form action="/sendMailCode" method="post">
     <button type="submit" class="btn btn-success">Получить код</button>
 </form>
+<form action="/checkMailCode" method="post">
+    <input type="text" name="code" placeholder="введите код" class="form-control"/>
+    <button type="submit" class="btn btn-success">Проверить код</button>
+</form>
+
 
 <div th:switch="${userLogin}">
     <h2 th:case="null">No login.</h2>
