--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -47,26 +47,24 @@
   </div>
 </header>
 
-<body>
-
 
 <div class="container reg_form">
-  <form class="row justify-content-center" method="post" action="add-user.html">
+  <form class="row justify-content-center" action="/new" method="post">
     <h2>Форма регистрации</h2>
     <div class="mb-3 col-12 col-md-6">
       <label for="formGroupExampleInput" class="form-label">Ваш логин</label>
-      <input type="text" class="form-control" id="formGroupExampleInput" placeholder="введите ваш логин">
+      <input type="text" name="login" class="form-control" id="formGroupExampleInput" placeholder="введите ваш логин">
     </div>
     <div class="w-100"></div>
     <div class="mb-3 col-12 col-md-6">
       <label for="exampleInputEmail1" class="form-label">Email</label>
-      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="введите ваш email">
+      <input type="email" name="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="введите ваш email">
       <div id="emailHelp" class="form-text">Ваш email адрес не будет использован для спама)</div>
     </div>
     <div class="w-100"></div>
     <div class="mb-3 col-12 col-md-6">
       <label for="exampleInputPassword1" class="form-label">Пароль</label>
-      <input type="password" class="form-control" id="exampleInputPassword1" placeholder="введите ваш пароль">
+      <input type="password" name="password" class="form-control" id="exampleInputPassword1" placeholder="введите ваш пароль">
     </div>
     <div class="w-100"></div>
     <div class="mb-3 col-12 col-md-6">
@@ -80,19 +78,6 @@
     </div>
   </form>
 </div>
-
-<div>
-  <h2>New User</h2>
-  <div>
-    <form action="/new" method="post">
-      <input type="text" name="login" placeholder="введите логин" class="form-control"/>
-      <input type="text" name="email" placeholder="введите почту" class="form-control"/>
-      <input type="text" name="password" placeholder="введите пароль" class="form-control"/>
-      <button type="submit" class="btn btn-success">Добавить пользователя</button>
-    </form>
-  </div>
-</div>
-</body>
 
 <footer>
   <p>© 2021 Мой сайт. Все права защищены.</p>
