--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -32,7 +32,7 @@
                         <a href="/log"><i class="fa-solid fa-user"></i>Аккаунт</a>
                         <ul>
                             <li><a href="/new">Регистрация</a></li>
-                            <li><a href="/">Авторизация</a></li>
+                            <li><a href="/log">Авторизация</a></li>
                         </ul>
                     </li>
                     <div th:switch="${userLogin}">
