--- a/src/main/resources/templates/authorization.html
+++ b/src/main/resources/templates/authorization.html
@@ -29,18 +29,18 @@
         <ul>
           <li><a href="/">Главная</a> </li>
           <li>
-            <a href="/log"><i class="fa-solid fa-user"></i>Аккаунт</a>
+            <a href="/log"><i class="fa-solid fa-user"></i>
+              <div th:switch="${userLogin}">
+                <h2 th:case="null">Аккаунт</h2>
+                <div th:case="*">
+                  <p th:text="${userLogin.login}"/>
+                </div>
+              </div></a>
             <ul>
               <li><a href="/new">Регистрация</a></li>
               <li><a href="/log">Авторизация</a></li>
             </ul>
           </li>
-          <div th:switch="${userLogin}">
-            <h2 th:case="null"></h2>
-            <div th:case="*">
-              <p th:text="${userLogin.login}"/>
-            </div>
-          </div>
         </ul>
       </nav>
     </div>
@@ -51,16 +51,16 @@
 
 
 <div class="container reg_form">
-  <form class="row justify-content-center" method="post" action="add-user.html">
+  <form class="row justify-content-center" action="/auth" method="post">
     <h2>Форма авторизации</h2>
     <div class="mb-3 col-12 col-md-6">
       <label for="exampleInputEmail1" class="form-label">Email</label>
-      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="введите ваш email">
+      <input type="email" name="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="введите ваш email">
     </div>
     <div class="w-100"></div>
     <div class="mb-3 col-12 col-md-6">
       <label for="exampleInputPassword1" class="form-label">Пароль</label>
-      <input type="password" class="form-control" id="exampleInputPassword1" placeholder="введите ваш пароль">
+      <input type="password" name="passwordInput" class="form-control" id="exampleInputPassword1" placeholder="введите ваш пароль">
     </div>
     <div class="w-100"></div>
     <div class="mb-3 col-12 col-md-6">
