--- a/src/main/resources/templates/authorization.html
+++ b/src/main/resources/templates/authorization.html
@@ -29,13 +29,10 @@
         <ul>
           <li><a href="/">Главная</a> </li>
           <li>
-            <a href="/log"><i class="fa-solid fa-user"></i>
               <div th:switch="${userLogin}">
-                <h2 th:case="null">Аккаунт</h2>
-                <div th:case="*">
-                  <p th:text="${userLogin.login}"/>
-                </div>
-              </div></a>
+                <a href="/log" th:case="null"><i class="fa-solid fa-user"></i>Аккаунт</a>
+                <a href="/log" th:case="*">${userLogin.login}</a>
+              </div>
             <ul>
               <li><a href="/new">Регистрация</a></li>
               <li><a href="/log">Авторизация</a></li>
@@ -47,12 +44,9 @@
   </div>
 </header>
 
-<body>
-
-
 <div class="container reg_form">
   <form class="row justify-content-center" action="/auth" method="post">
-    <h2>Форма авторизации</h2>
+    <h2>Авторизация</h2>
     <div class="mb-3 col-12 col-md-6">
       <label for="exampleInputEmail1" class="form-label">Email</label>
       <input type="email" name="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="введите ваш email">
@@ -69,20 +63,6 @@
     </div>
   </form>
 </div>
-
-<body>
-  <div>
-    <h2>Авторизация</h2>
-    <div>
-      <form action="/auth" method="post">
-        <input type="text" name="email" placeholder="введите почту" class="form-control"/>
-        <input type="text" name="passwordInput" placeholder="введите пароль" class="form-control"/>
-        <button type="submit" class="btn btn-success">Войти</button>
-      </form>
-      <p><a href="/new">Зарегистрироваться</a></p>
-    </div>
-  </div>
-</body>
 
 <footer>
   <p>© 2021 Мой сайт. Все права защищены.</p>
