--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -29,7 +29,10 @@
         <ul>
           <li><a href="/">Главная</a> </li>
           <li>
-            <a href="/log"><i class="fa-solid fa-user"></i>Аккаунт</a>
+            <div th:switch="${userLogin}">
+              <a href="/log" th:case="null"><i class="fa-solid fa-user"></i>Аккаунт</a>
+              <a href="/log" th:case="*" th:text="${userLogin.login}"></a>
+            </div>
             <ul>
               <li><a href="/new">Регистрация</a></li>
               <li><a href="/">Авторизация</a></li>
@@ -44,7 +47,7 @@
 
 <div class="container reg_form">
   <form class="row justify-content-center" action="/new" method="post">
-    <h2>Форма регистрации</h2>
+    <h2>Регистрация</h2>
     <div class="mb-3 col-12 col-md-6">
       <label for="formGroupExampleInput" class="form-label">Ваш логин</label>
       <input type="text" name="login" class="form-control" id="formGroupExampleInput" placeholder="введите ваш логин">
