--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -53,7 +53,18 @@
     <div class="mb-3 col-12 col-md-6">
       <label for="exampleInputEmail1" class="form-label">Email</label>
       <input type="email" name="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="введите ваш email">
-      <div id="emailHelp" class="form-text">Ваш email адрес не будет использован для спама)</div>
+    </div>
+    <div class="w-100"></div>
+    <div class="mb-3 col-12 col-md-6">
+      <label for="inputPassword2" class="form-label">Код подтверждения</label>
+      <div class="row g-3">
+        <div class="col-md-8">
+          <input type="password" class="form-control" id="inputPassword2" placeholder="Ввведите код подтверждения">
+        </div>
+        <div class="col-md-4">
+          <a href="authorization.html">Получить код</a>
+        </div>
+      </div>
     </div>
     <div class="w-100"></div>
     <div class="mb-3 col-12 col-md-6">
