--- a/src/main/resources/templates/authorization.html
+++ b/src/main/resources/templates/authorization.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>IG</title>
-  <link rel="stylesheet" th:href="@{/style.css}" />
+  <link rel="stylesheet" th:href="@{/authorization.css}" />
   <!--Картинки-->
   <script src="https://kit.fontawesome.com/9e56eb5395.js" crossorigin="anonymous"></script>
 
@@ -44,7 +44,7 @@
   </div>
 </header>
 
-<div class="container reg_form">
+<div class="container auth_form">
   <form class="row justify-content-center" action="/auth" method="post">
     <h2>Авторизация</h2>
     <div class="mb-3 col-12 col-md-6">
