--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>IG</title>
-  <link rel="stylesheet" th:href="@{/style.css}" />
+  <link rel="stylesheet" th:href="@{/registration.css}" />
   <!--Картинки-->
   <script src="https://kit.fontawesome.com/9e56eb5395.js" crossorigin="anonymous"></script>
 
@@ -64,8 +64,8 @@
         <div class="col-md-8">
           <input type="password" class="form-control" id="inputPassword2" placeholder="Ввведите код подтверждения">
         </div>
-        <div class="col-md-4">
-          <a href="authorization.html">Получить код</a>
+        <div class="col-md-4" style="margin-top: 25px;">
+          <a id="a_code" href="authorization.html">Получить код</a>
         </div>
       </div>
     </div>
