--- a/src/main/resources/static/registration.css
+++ b/src/main/resources/static/registration.css
@@ -37,7 +37,7 @@ header h1 a {
     text-decoration: none;
 }
 header h1 a:hover {
-     color: #000000;
+    color: #000000;
 }
 header ul {
     margin: 0;
@@ -81,7 +81,28 @@ header ul li ul li a {
     color: #eac7df;
 }
 
-
+/* Форма регистрации */
+.reg_form h2 {
+    text-align: center;
+    margin: 30px 0px;
+}
+.reg_form a {
+    font-size: 1.2em;
+    transition: all .3s;
+    color: #5c5b5b;
+    text-decoration: none;
+    margin-left: 223px;
+}
+.reg_form a:hover {
+    margin-left: 217px;
+    transition: all .3s;
+}
+.reg_form input {
+    height: 3rem;
+}
+#a_code {
+    margin-left: 25px;
+}
 
 /* Стили для подвала */
 footer {
