--- a/src/main/resources/static/registration.css
+++ b/src/main/resources/static/registration.css
@@ -103,6 +103,13 @@ header ul li ul li a {
 #a_code {
     margin-left: 25px;
 }
+/* Обработка полей для ввода */
+input:invalid:not(:placeholder-shown) {
+    border-color: red;
+}
+input:valid:not(:placeholder-shown) {
+    border-color: green;
+}
 
 /* Стили для подвала */
 footer {
