--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -73,15 +73,21 @@
     </div>
     <div class="w-100"></div>
     <div class="mb-3 col-12 col-md-6">
-      <label for="exampleInputPassword1" class="form-label">Пароль</label>
-      <input required type="password" name="password" class="form-control" id="exampleInputPassword1" placeholder="введите ваш пароль" minlength="8"
-             oninvalid="this.setCustomValidity('Пароль не может быть короче 8 символов!')" oninput="this.setCustomValidity('')" onchange="onChange()">
+      <label for="password1" class="form-label">Пароль</label>
+      <div class="password">
+        <input required type="password" name="password" class="form-control" id="password1" placeholder="введите ваш пароль" minlength="8"
+               oninvalid="this.setCustomValidity('Пароль не может быть короче 8 символов!')" oninput="this.setCustomValidity('')" onchange="onChange()">
+        <a href="#" class="password-control" style="margin-right: 15px;" onclick="return show_hide_password('password1', this, 'eye1');"><i id="eye1" class="fa-solid fa-eye-slash"></i></a>
+      </div>
     </div>
     <div class="w-100"></div>
-    <div class="mb-3 col-12 col-md-6">
-      <label for="exampleInputPassword2" class="form-label">Повторите пароль</label>
-      <input required type="password" name="confirm" class="form-control" id="exampleInputPassword2" placeholder="повторите ваш пароль" minlength="8"
-              oninput="this.setCustomValidity('')" onchange="onChange()">
+    <div class="mb-3 col-10 col-md-6">
+      <label for="password2" class="form-label">Повторите пароль</label>
+      <div class="password">
+        <input required type="password" name="confirm" class="form-control" id="password2" placeholder="повторите ваш пароль" minlength="8"
+             oninput="this.setCustomValidity('')" onchange="onChange()" >
+        <a href="#" class="password-control" style="margin-right: 15px;"  onclick="return show_hide_password('password2', this, 'eye2');"><i id="eye2" class="fa-solid fa-eye-slash"></i></a>
+      </div>
     </div>
     <div class="w-100"></div>
     <div class="mb-3 col-12 col-md-6">
@@ -90,6 +96,24 @@
     </div>
   </form>
 </div>
+
+<script>
+  <!-- Функция, позволяющая посмотреть введенный пароль -->
+  function show_hide_password(pass, target, img){
+    var image = document.getElementById(img);
+    var input = document.getElementById(pass);
+    if (input.getAttribute('type') == 'password') {
+      target.classList.add('view');
+      input.setAttribute('type', 'text');
+      image.className = "fa-solid fa-eye";
+    } else {
+      target.classList.remove('view');
+      input.setAttribute('type', 'password');
+      image.className = "fa-solid fa-eye-slash";
+    }
+    return false;
+  }
+</script>
 
 <script>
   <!-- Функция для проверки совпадения паролей -->
@@ -103,6 +127,7 @@
     }
   }
 </script>
+
 
 <footer>
   <p>© 2021 Мой сайт. Все права защищены.</p>
