Changing the footter

--- a/src/main/resources/templates/authorization.html
+++ b/src/main/resources/templates/authorization.html
@@ -86,9 +86,13 @@
   }
 </script>
 
-<footer>
-  <p>© 2021 Мой сайт. Все права защищены.</p>
-</footer>
+<div class="footer container-fluid">
+  <div class="footer-content container">
+    <div class="row">
+      <p>© 2023 Мой сайт. Все права защищены.</p>
+    </div>
+  </div>
+</div>
 
 </body>
 </html>
