--- a/src/main/resources/static/registration.css
+++ b/src/main/resources/static/registration.css
@@ -124,9 +124,12 @@ input:valid:not(:placeholder-shown) {
 }
 
 /* Стили для подвала */
-footer {
+.footer {
     background-color: #333;
     color: #fff;
-    padding: 10px;
-    text-align: center;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 40px;
 }
