--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -81,12 +81,13 @@ header ul li ul li a {
     color: #eac7df;
 }
 
-
-
 /* Стили для подвала */
-footer {
+.footer {
     background-color: #333;
     color: #fff;
-    padding: 10px;
-    text-align: center;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 40px;
 }
