--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -98,9 +98,14 @@
     </div>
 </div>
 
-<footer>
-    <p>© 2021 Мой сайт. Все права защищены.</p>
-</footer>
+
+<div class="footer container-fluid">
+    <div class="footer-content container">
+        <div class="row">
+            <p>© 2023 Мой сайт. Все права защищены.</p>
+        </div>
+    </div>
+</div>
 
 </body>
 </html>
