--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -30,8 +30,8 @@
                     <li><a href="/">Главная</a> </li>
                     <li>
                         <div th:switch="${userLogin}">
-                            <a href="/log" th:case="null"><i class="fa-solid fa-user"></i>Аккаунт</a>
-                            <a href="/log" th:case="*" th:text="${userLogin.login}"></a>
+                            <a href="/acc" th:case="null"><i class="fa-solid fa-user"></i>Аккаунт</a>
+                            <a href="/acc" th:case="*" th:text="${userLogin.login}"></a>
                         </div>
                         <ul>
                             <li><a href="/new">Регистрация</a></li>
@@ -43,6 +43,7 @@
         </div>
     </div>
 </header>
+
 <button id="myButton">Получить код</button>
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
